@@ -1,5 +1,6 @@
 2016-06-05  SilverNexus
 	* Makefile.am: Add binary_file_cache.c to list of sources.
+	* binary_file_cache.c: Correct some warnings from sort and search comparisons.
 
 2016-06-03  SilverNexus
 	* search.c: Remove unecessary variable in parse_file().
